--- a/home-4.html
+++ b/home-4.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from html.bslthemes.com/spoli/home-4.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Nov 2024 07:52:52 GMT -->
 <head>
 
-    <title>Spoli – Personal Portfolio & Resume HTML Template</title>
+    <title>Spali – Personal Portfolio & Resume </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,7 +108,7 @@
                     </ul>
                 </div>
                 <div class="mil-side-menu-footer">
-                    <span class="mil-fs-16 mil-c-m-1">Copyright <a href="#." class="mil-c-grad">Spoli</a> 2024. All rights reserved.</span>
+                    <span class="mil-fs-16 mil-c-m-1">Copyright <a href="#." class="mil-c-grad">Spali</a> 2024. All rights reserved.</span>
                 </div>
             </div>
         </div>
@@ -120,13 +120,13 @@
                 <div class="row mil-aic">
                     <div class="col-lg-7">
                         <div class="mil-hero-title">
-                            <h1 class="mil-h1 mil-mb-10">Hi! I’m Alex Spoli</h1>
+                            <h1 class="mil-h1 mil-mb-10">Hi! I’m Alex Spali</h1>
                             <div class="mil-title-img mil-mb-30">
                                 <img src="img/banner-4/3.jpg" alt="face">
                                 <div class="mil-h1 mil-mb-10"> Developer</div>
                             </div>
                             <div style="background: #141414; overflow:hidden; padding: 1.5em 2.5rem .5rem;" class="mil-mb-30">
-                                <pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">&lt;!DOCTYPE html&gt;</span><br><span style="color: #6ab825; font-weight: bold">&lt;html</span>&nbsp;<span style="color: #bbbbbb">lang=</span><span style="color: #ed9d13">&quot;zxx&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><span style="color: #6ab825; font-weight: bold">&lt;head&gt;</span><br><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;meta</span>&nbsp;<span style="color: #bbbbbb">charset=</span><span style="color: #ed9d13">&quot;UTF-8&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;meta</span>&nbsp;<span style="color: #bbbbbb">name=</span><span style="color: #ed9d13">&quot;viewport&quot;</span>&nbsp;<span style="color: #bbbbbb">content=</span><span style="color: #ed9d13">&quot;width=device-width, initial-scale=1.0&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;meta</span>&nbsp;<span style="color: #bbbbbb">http-equiv=</span><span style="color: #ed9d13">&quot;X-UA-Compatible&quot;</span> <span style="color: #bbbbbb">content=</span><span style="color: #ed9d13">&quot;ie=edge&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><br>&nbsp;&nbsp;<span style="color: #999999; font-style: italic">&lt;!-- page title --&gt;</span><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;title&gt;</span>Spoli<span style="color: #6ab825; font-weight: bold">&lt;/title&gt;</span><br><br><span style="color: #6ab825; font-weight: bold">&lt;/head&gt;</span>
+                                <pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">&lt;!DOCTYPE html&gt;</span><br><span style="color: #6ab825; font-weight: bold">&lt;html</span>&nbsp;<span style="color: #bbbbbb">lang=</span><span style="color: #ed9d13">&quot;zxx&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><span style="color: #6ab825; font-weight: bold">&lt;head&gt;</span><br><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;meta</span>&nbsp;<span style="color: #bbbbbb">charset=</span><span style="color: #ed9d13">&quot;UTF-8&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;meta</span>&nbsp;<span style="color: #bbbbbb">name=</span><span style="color: #ed9d13">&quot;viewport&quot;</span>&nbsp;<span style="color: #bbbbbb">content=</span><span style="color: #ed9d13">&quot;width=device-width, initial-scale=1.0&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;meta</span>&nbsp;<span style="color: #bbbbbb">http-equiv=</span><span style="color: #ed9d13">&quot;X-UA-Compatible&quot;</span> <span style="color: #bbbbbb">content=</span><span style="color: #ed9d13">&quot;ie=edge&quot;</span><span style="color: #6ab825; font-weight: bold">&gt;</span><br>&nbsp;&nbsp;<span style="color: #999999; font-style: italic">&lt;!-- page title --&gt;</span><br>&nbsp;&nbsp;<span style="color: #6ab825; font-weight: bold">&lt;title&gt;</span>Spali<span style="color: #6ab825; font-weight: bold">&lt;/title&gt;</span><br><br><span style="color: #6ab825; font-weight: bold">&lt;/head&gt;</span>
                                 </pre>
                             </div>
                             <div class="mil-buttons">
@@ -166,7 +166,7 @@
             <div class="container">
                 <div class="row mil-jcb mil-aie">
                     <div class="col-lg-6">
-                        <h5 class="mil-fs-38 mil-fw-400 mil-mb-40">I’m a designer/ based in San Francisco. Currently a freelancer. You can see my hobbies on <span class="mil-c-grad">@Spoli</span> and some photos on me too.</h5>
+                        <h5 class="mil-fs-38 mil-fw-400 mil-mb-40">I’m a designer/ based in San Francisco. Currently a freelancer. You can see my hobbies on <span class="mil-c-grad">@Spali</span> and some photos on me too.</h5>
                         <a href="#contacts" class="mil-btn-circle mil-b-m-1 mil-mb-60"><span class="mil-fw-700 mil-ff-1 mil-c-m-3">My Works</span></a>
                     </div>
                     <div class="col-lg-5">
@@ -1053,7 +1053,7 @@
                         <div class="col col-md-4 mil-jce mil-sm-jcc">
                             <div class="mil-aic">
                                 <img src="img/logo/xs.png" alt="logo" class="mil-w-12">
-                                <span class="mil-fs-16 mil-ml-10">Copyright <a href="#." class="mil-c-grad">Spoli</a> 2024. All rights reserved.</span>
+                                <span class="mil-fs-16 mil-ml-10">Copyright <a href="#." class="mil-c-grad">Spali</a> 2024. All rights reserved.</span>
                             </div>
                         </div>
                     </div>
