--- a/publication.html
+++ b/publication.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from html.bslthemes.com/spoli/publication.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 12 Nov 2024 07:52:56 GMT -->
 <head>
 
-    <title>Spoli – Personal Portfolio & Resume HTML Template</title>
+    <title>Spali – Personal Portfolio & Resume </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -108,7 +108,7 @@
                     </ul>
                 </div>
                 <div class="mil-side-menu-footer">
-                    <span class="mil-fs-16 mil-c-m-1">Copyright <a href="#." class="mil-c-grad">Spoli</a> 2024. All rights reserved.</span>
+                    <span class="mil-fs-16 mil-c-m-1">Copyright <a href="#." class="mil-c-grad">Spali</a> 2024. All rights reserved.</span>
                 </div>
             </div>
         </div>
@@ -470,7 +470,7 @@
                         <div class="col col-md-4 mil-jce mil-sm-jcc">
                             <div class="mil-aic">
                                 <img src="img/logo/xs.png" alt="logo" class="mil-w-12">
-                                <span class="mil-fs-16 mil-ml-10">Copyright <a href="#." class="mil-c-grad">Spoli</a> 2024. All rights reserved.</span>
+                                <span class="mil-fs-16 mil-ml-10">Copyright <a href="#." class="mil-c-grad">Spali</a> 2024. All rights reserved.</span>
                             </div>
                         </div>
                     </div>
